<resources>
    <string name="app_name">SecureMessagingApp</string>

    <string name="login_to_continue">Login To Continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="signin">Sign In</string>
    <string name="create_an_account">Create An Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="enter_password_to_authenticate">Enter Password to Authenticate</string>
    <string name="authenticate">Authenticate</string>
</resources>