<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    tools:context=".activities.ChatActivity">

  <View
      android:id="@+id/viewBackground"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginBottom="@dimen/_16sdp"
      android:background="@drawable/background_content_top"
      app:layout_constraintBottom_toTopOf="@id/layoutSend"
      app:layout_constraintTop_toTopOf="parent" />

  <View
      android:id="@+id/view"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="@color/primary"
      app:layout_constraintBottom_toTopOf="@id/viewSupporter"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:layout_editor_absoluteX="0dp" />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/imageBack"
      android:layout_width="@dimen/_30sdp"
      android:layout_height="@dimen/_30sdp"
      android:layout_marginStart="@dimen/_16sdp"
      android:layout_marginLeft="@dimen/_16sdp"
      android:layout_marginTop="@dimen/_12sdp"
      android:padding="@dimen/_5sdp"
      android:src="@drawable/ic_back"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:tint="@color/white" />

  <Switch
      android:id="@+id/encrypted"
      android:layout_width="59dp"
      android:layout_height="40dp"
      android:layout_marginTop="@dimen/_12sdp"
      android:layout_marginEnd="@dimen/_16sdp"
      android:checked="false"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <TextView
      android:id="@+id/textName"
      android:layout_width="240dp"
      android:layout_height="29dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:ellipsize="end"
      android:gravity="center"
      android:maxLines="1"
      android:textColor="@color/white"
      android:textSize="@dimen/_14ssp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/viewSupporter"
      app:layout_constraintEnd_toStartOf="@+id/encrypted"
      app:layout_constraintHorizontal_bias="0.041"
      app:layout_constraintStart_toEndOf="@+id/imageBack"
      app:layout_constraintTop_toTopOf="@+id/viewBackground"
      app:layout_constraintVertical_bias="0.0" />

  <View
      android:id="@+id/viewSupporter"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/_12sdp"
      android:background="@color/primary"
      app:layout_constraintTop_toBottomOf="@id/imageBack" />


  <androidx.recyclerview.widget.RecyclerView

      android:id="@+id/chatRecyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:clipToPadding="false"
      android:orientation="vertical"
      android:overScrollMode="never"
      android:padding="@dimen/_20sdp"
      android:visibility="gone"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="@id/viewBackground"
      app:layout_constraintTop_toBottomOf="@id/viewSupporter"
      app:stackFromEnd="true" />

  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="@dimen/_25sdp"
      android:layout_height="@dimen/_25sdp"
      app:layout_constraintBottom_toBottomOf="@id/viewBackground"
      app:layout_constraintEnd_toEndOf="@id/viewBackground"
      app:layout_constraintStart_toStartOf="@id/viewBackground"
      app:layout_constraintTop_toTopOf="@id/viewBackground" />

  <FrameLayout
      android:id="@+id/layoutSend"
      android:layout_width="@dimen/_40sdp"
      android:layout_height="@dimen/_40sdp"
      android:layout_marginEnd="@dimen/_16sdp"
      android:layout_marginRight="@dimen/_16sdp"
      android:layout_marginBottom="@dimen/_12sdp"
      android:background="@drawable/background_chat_input"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_4sdp"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/ic_send"
        app:tint="@color/white" />


  </FrameLayout>

  <EditText
      android:id="@+id/inputMessage"
      android:layout_width="279dp"
      android:layout_height="48dp"
      android:layout_marginStart="14dp"
      android:layout_marginEnd="5dp"
      android:layout_marginBottom="16dp"
      android:background="@drawable/background_chat_input"
      android:hint="@string/type_a_message"
      android:imeOptions="actionDone"
      android:importantForAutofill="no"
      android:inputType="text"
      android:paddingStart="@dimen/_16sdp"
      android:paddingEnd="@dimen/_16sdp"
      android:textColor="@color/white"
      android:textColorHint="@color/secondary_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/layoutSend"
      app:layout_constraintHorizontal_bias="0.447"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textAvailability"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/green"
      android:gravity="center"
      android:padding="@dimen/_2ssp"
      android:text="@string/online"
      android:textColor="@color/white"
      android:textSize="@dimen/_10ssp"
      android:visibility="gone"
      app:layout_constraintTop_toBottomOf="@+id/viewSupporter" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/authWindow"
      android:layout_width="264dp"
      android:layout_height="181dp"
      android:background="@color/input_background"
      app:layout_constraintBottom_toBottomOf="@+id/viewBackground"
      app:layout_constraintEnd_toEndOf="@+id/viewBackground"
      app:layout_constraintStart_toStartOf="@+id/viewBackground"
      app:layout_constraintTop_toBottomOf="@+id/viewSupporter">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/enter_password_to_authenticate"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/checkpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/checkpass"
        android:layout_width="237dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:textColor="@color/primary_text"
        android:background="@drawable/background_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/setauth"
        android:layout_width="165dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/authenticate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkpass" />
  </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>